Fixed broken layout on other devices

--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -1,14 +1,12 @@
 /* HEADER */
 
-* {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Rubik', sans-serif;
+.second-edit-area {
+    margin: 0 auto;
+    width: 600px;
 }
 
 .edit_content {
     display: flex;
-    max-width: 600px;
     margin: 0 auto;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
@@ -27,6 +25,7 @@
     align-self: center;
     margin-left: -180px;
     font-weight: bold;
+    font-size: 30px;
 }
 
 /* BODY */
@@ -39,7 +38,6 @@
 
 .edit_form{
     display: flex;
-    max-width: 600px;
     margin: 0 auto;
     border-top: 1px solid #ccc;
     border-right: 1px solid #ccc;
@@ -76,6 +74,8 @@
     border-radius: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
+    width: 250px;
+    height: 250px;
 }
 
 .bottom_edit {
@@ -84,6 +84,7 @@
     border-top: 1px solid #ccc;
     padding-top: 10px;
     padding-bottom: 10px;
+    flex-wrap: wrap;
 }
 
 .load_pic {
@@ -96,9 +97,9 @@
 
 .cancel-button {
     padding: 10px 18px;
-    background-color: #08A0E9;
+    background-color: rgb(73, 73, 73);
     font-size: 15px;
-    border: #08A0E9;
+    border: rgb(73, 73, 73);
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -116,7 +117,6 @@
 
 .edit_ditch {
     margin: 0 auto;
-    max-width: 600px;
     height: 10px;
     border-top: 1px solid #ccc;
     background-color: rgb(247, 248, 248);
@@ -125,6 +125,56 @@
     border-left: 1px solid #ccc;
 }
 
-@media screen and (max-width: 600px) {
-    
+@media screen and (max-width: 360px) {
+    .edit_header {
+        margin-left: -160px;
+        font-size: 50px;
+    }
+
+    .edit_logo {
+        width: 38%;
+    }
+
+    .edit_name, .edit_textarea, .load_pic, #update, #delete {
+        font-size: 25px;
+    }
+
+    .edit_pic {
+        width: 270px;
+        height: 270px;
+    }
+
+    .edit_icon {
+        max-width: 80px;
+        max-height: 80px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .edit_header {
+        margin-left: -160px;
+        font-size: 50px;
+    }
+
+    .edit_logo {
+        width: 38%;
+    }
+
+    .edit_name, .edit_textarea, .load_pic, #update, #delete {
+        font-size: 25px;
+    }
+
+    .edit_pic {
+        width: 270px;
+        height: 270px;
+    }
+
+    .edit_icon {
+        max-width: 80px;
+        max-height: 80px;
+    }
+
+    #update, #cancel {
+        margin-bottom: 5px;
+    }
 }
